@date : 2023-12-06 @author : 김우렬 @version : 1.0.0:23120601 @comment : push and splash activity setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="base_url">https://www.parnashotel.com/</string>
     <!-- 점검일 경우 접속 url -->
     <string name="sub_url">http://183.99.79.4/info</string>
+
+    <!-- 푸시채널 관련 -->
+    <string name="channel_id">parnas</string>
+    <string name="channel_name">PARNAS</string>
+    <string name="channel_desc">푸시알림</string>
 </resources>
