--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,16 @@
     <string name="channel_id">parnas</string>
     <string name="channel_name">PARNAS</string>
     <string name="channel_desc">푸시알림</string>
+
+    <string name="main_login_tv">로그인</string>
+    <string name="main_reg_tv">회원가입</string>
+    <string name="todo">TODO</string>
+    <string name="main_msg">내가 디자인하는\n새로운 라이프 스타일 멤버십</string>
+    <string name="reword_more">리워드 혜택 자세히 보기</string>
+    <string name="room_reservation">객실 예약</string>
+    <string name="dining_reservations">다이닝 예약</string>
+    <string name="hotel_search">호텔 찾기</string>
+    <string name="reservation_inquiry">예약 조회</string>
+    <string name="main_footer_msg">리워즈 회원이 되어 전용 상품을 누려보세요</string>
+
 </resources>
