--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,12 @@
     <string name="reservation_inquiry">예약 조회</string>
     <string name="main_footer_msg">리워즈 회원이 되어 전용 상품을 누려보세요</string>
 
+    <!--마이페이지-->
+    <string name="page_name">REWARD</string>
+    <string name="greeting">NAS KIM 님, \n다시 만나 반가워요</string>
+    <string name="btm_sheet_title">Your Membership Point</string>
+    <string name="btm_sheet_point">43,402P</string>
+    <string name="btm_sheet_grade">Membership\nGrade</string>
+    <string name="btm_sheet_info">How to raise Membership Grade?</string>
+
 </resources>
