--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,8 @@
     <string name="main_reg_tv">회원가입</string>
     <string name="todo">TODO</string>
     <string name="main_msg">내가 디자인하는\n새로운 라이프 스타일 멤버십</string>
-    <string name="reword_more">리워드 혜택 자세히 보기</string>
+    <string name="reward_more">리워드 혜택 자세히 보기</string>
+    <string name="waist_title">어디로 떠나시겠습니까</string>
     <string name="room_reservation">객실 예약</string>
     <string name="dining_reservations">다이닝 예약</string>
     <string name="hotel_search">호텔 찾기</string>
@@ -39,10 +40,8 @@
 
     <!--마이페이지-->
     <string name="page_name">REWARD</string>
-    <string name="greeting">NAS KIM 님, \n다시 만나 반가워요</string>
-    <string name="btm_sheet_title">Your Membership Point</string>
-    <string name="btm_sheet_point">43,402P</string>
-    <string name="btm_sheet_grade">Membership\nGrade</string>
-    <string name="btm_sheet_info">How to raise Membership Grade?</string>
+    <string name="myPage">My page</string>
+    <string name="greeting">안녕하세요,</string>
+    <string name="btm_sheet_point">43,402</string>
 
 </resources>
