@date : 2023-12-22 @author : 김우렬 @version : 1.0.0:23122202 @comment  · 메인 페이지 좌측 상단 로고 클릭 시 리워드 페이지로 이동할 수 있도록 임시 조치

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="todo">TODO</string>
     <string name="main_msg">내가 디자인하는\n새로운 라이프 스타일 멤버십</string>
     <string name="reward_more">리워드 혜택 자세히 보기</string>
-    <string name="waist_title">어디로 떠나시겠습니까</string>
+    <string name="waist_title">어디로 떠나시나요?</string>
     <string name="room_reservation">객실 예약</string>
     <string name="dining_reservations">다이닝 예약</string>
     <string name="hotel_search">호텔 찾기</string>
