@date : 2024-01-12 @author : 김우렬 @version : 1.0.0:24011202 @comment : 로그인 분기처리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
 
     <!--마이페이지-->
     <string name="page_name">REWARD</string>
-    <string name="myPage">My page</string>
+    <string name="dashBoard">Dash board</string>
     <string name="greeting">안녕하세요,</string>
 
 </resources>
