--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="btn_yes">네</string>
     <string name="btn_no">아니요</string>
     <string name="btn_confirm">확인</string>
+    <string name="btn_logout">로그아웃</string>
 
     <!--카카오 로그인-->
     <string name="kakao_app_key">ad25a9e0b13535621097c8a06b3928a7</string>
